# trash-tool

./: Cargo.toml  Makefile  README.md  spec.md
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/trash/: color.rs  emptying.rs  error.rs  file_type.rs  listing.rs  locations.rs  mod.rs  restoring.rs  spec.rs  trashing.rs  url_escape.rs
