[package]
name = "trash-command"
version = "0.8.0"
edition = "2021"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
colored = "2.1"
dirs = "5.0"
chrono = "0.4"
users = "0.11"
humansize = "2.1"
term_grid = "0.1"
term_size = "0.3"
mountpoints = "0.2.1"
skim = { version = "0.11.0", features = ["cli"] }
regex = "1"
once_cell = "1"
shlex = "1.1.0"
thiserror = "1.0"
percent-encoding = "2.3.2"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.10"